fix overflowing dd text

--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,7 @@ dt {
 }
 dd {
   display: block;
-  width: 25rem;
+  max-width: 25rem;
   float: left;
   margin-bottom: 3rem;
 }
